# Tiger-Delta-AI-Safety

./:  Add B.html  CITATION.cff  CRITIQUE_AND_ROADMAP.md  Cargo.toml  GrokBeda.html  LICENSE.md  Makefile  Memorandum_twir.html  README.md  README1.html  TIGER-DELTA-LICENSE.md  build.rs  htp.vt HTML  usdt-simulator.html  usdt.html  Горка. HTML  Горка.HTML  ДодатокВ.html  Перенос грока.txt  аніцер.html  дгьші.html
assets/: BANNER.txt
benches/: production.rs
benches/scripts/: benchmark.sh
docs/author/: CV_VLADYSLAV_HONCHAROV_AI_SECURITY.md.md
docs/whitepapers/: ADDENDUM_v0.2_PROOF.md  STRATEGIC_MEMORANDUM_V2_SINGLE_TIGER.md  WHITEPAPER.md
src/: atomic_core.rs  lagrange.rs  lumis.rs  main.rs  simul.rs  string_state.rs
src/kernel/: tiger_delta_xdp.c  tiger_deltaxdp.c
src/tiger_delta/: core.py  delta_tiger_v2.3.py  resonance.py  tiger_federation_core.py  visualize_breath.py
tests/: TEST_REPORT_v1.md  lamme_bench.rs  test_results.txt
tests/logs/: phase2_resonance.json
tiger_delta/: __init__.py  core.py  jungle.py
tiger_delta/tests/: test_mechanics.py
