[package]
name = "delta_tiger"
version = "1.0.0"
edition = "2021"
authors = ["Vladyslav Honcharov <giovanigentile90@gmail.com>"]
description = "Delta Tiger: Bio-mimetic autonomous cyber defense engine using golden ratio harmonics and nonlinear resonance"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SingleTiger90/Tiger-Delta-AI-Safety"

[[bin]]
name = "tiger_delta"
path = "src/main.rs"

[[bin]]
name = "exhale_sim"
path = "src/bin/exhale_sim.rs"

[[bin]]
name = "red_team"
path = "src/bin/red_team_attack.rs"

[[bin]]
name = "tiger_loader"
path = "src/bin/tiger_loader.rs"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_chacha = "0.3"

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya", branch = "main" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
