[package]
name = "tiger-delta-ai-safety"
version = "0.2.0"
edition = "2021"
authors = ["Vladyslav Honcharov <giovanigentile90@gmail.com>"]
description = "Aperiodic Resonance Core for Autonomous Cyber Defense"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# === Red Team stress tests ===
num_cpus = "1.17"

# === Runtime randomness (later use) ===
rand = "0.8"

[[bin]]
name = "red_team_multicore"
path = "src/bin/red_team_multicore.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
